--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -6,12 +6,16 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby: ["2.6", "2.7", "3.0"]
+        ruby: ["2.6", "2.7", "3.0", "3.1"]
         db: [sqlite, mysql, postgres]
         exclude:
           - ruby: "2.6"
             db: sqlite
           - ruby: "2.6"
+            db: postgres
+          - ruby: "3.0"
+            db: sqlite
+          - ruby: "3.0"
             db: postgres
 
     steps:
